@@ -27,7 +27,7 @@ License: GPLv2
 Packager: Fred Gleason <fredg@paravelsystems.com>
 Group: Productivity/Multimedia/Other
 Source: %{name}-@VERSION@.tar.gz
-BuildRequires: qt-devel libsamplerate-devel libsndfile-devel alsa-lib-devel
+BuildRequires: qt-devel libsamplerate-devel libsndfile-devel alsa-lib-devel libtool-ltdl-devel
 BuildRoot: /var/tmp/%{name}-@VERSION@
 Requires: curl file
 
@@ -90,5 +90,7 @@ rm -rf $RPM_BUILD_ROOT
 
 
 %changelog
+* Fri Dec  9 2016 Fred Gleason <fredg@paravelsystems.com>
+-- Added a libtool-ltdl-devel dependency.
 * Fri Jan 15 2016 Fred Gleason <fredg@paravelsystems.com>
 -- Initial RPM creation.
