@@ -319,3 +319,5 @@
 2016-12-07 Fred Gleason <fredg@paravelsystems.com>
 	* Added basic PortAudio support in 'src/glassplayer/dev_portaudio.cpp'
 	and 'src/glassplayer/dev_portaudio.h'.
+2016-12-09 Fred Gleason <fredg@paravelsystems.com>
+	* Converted the codecs to use Libtool libltdl for dynamic loading.
